# catching_turtles_ros2

./: README.md
ws/install/: local_setup.sh  setup.sh
ws/install/bring_up/share/bring_up/: package.sh
ws/install/bring_up/share/bring_up/config/: params.yaml
ws/install/bring_up/share/bring_up/launch/: catching_turtles.launch.py
ws/install/cpp_pkg/lib/cpp_pkg/: turtle_spawner_node
ws/install/cpp_pkg/share/cpp_pkg/: local_setup.sh  package.sh  package.xml
ws/install/interfaces/share/interfaces/: local_setup.sh  package.sh
ws/install/interfaces/share/interfaces/msg/: Turtle.idl
ws/install/interfaces/share/interfaces/srv/: KillTurtle.idl
ws/install/python_pkg/lib/python_pkg/: turtle_spawner_node
ws/install/python_pkg/share/python_pkg/: package.sh
ws/log/: latest_build  latest_test
ws/src/bring_up/: CMakeLists.txt
ws/src/bring_up/config/: params.yaml
ws/src/bring_up/launch/: catching_turtles.launch.py
ws/src/cpp_pkg/: CMakeLists.txt
ws/src/cpp_pkg/include/cpp_pkg/: turtle_control_node.hpp  turtle_spawner_node.hpp
ws/src/cpp_pkg/src/: turtle_control_node.cpp  turtle_spawner_node.cpp
ws/src/install/: local_setup.sh  setup.sh
ws/src/install/bring_up/share/bring_up/: package.bash  package.sh  package.xml  package.zsh
ws/src/install/cpp_pkg/share/cpp_pkg/: package.sh
ws/src/interfaces/: CMakeLists.txt
ws/src/interfaces/msg/: Turtle.msg
ws/src/log/: latest_build
ws/src/python_pkg/: package.xml  setup.py
ws/src/python_pkg/python_pkg/: turtle_control_node.py  turtle_spawner_node.py
(+41 files in other folders)
